--- a/packages/alfabit-input/package.json
+++ b/packages/alfabit-input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@anadare/alfabit-input",
+  "name": "@cicatrizdev/alfabit-input",
   "description": "Input do Design System Alfabit",
   "author": {
     "name": "Cicatriz",
